--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,3 @@
-@import 'components/variables';
+@import 'variables';
 @import 'components/madlib_form';
-@import 'components/header';
+@import 'header';
