--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,10 @@
 @import 'variables';
 @import 'mixins';
+
+@import 'header';
 @import 'components/madlib_form';
-@import 'header'
+@import 'components/madlib_content';
+
+body {
+    font-family: $font-primary;
+}
