Fortune Teller App with working functions

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,13 @@
+$christmasBlue: #1B88B8;
+$slateGrey: #708090;
 $bottegaGreen: #00CB79;
 $clearBlue: #45B0E5;
 $mainGray: #CFCFCF;
+$HoneyDew: #F0FFF0;
+$black: #000000;
+$DimGray: #696969;
+$CadetBlue: #5F9EA0;
 $darkGray: #444444;
-$font-primary: 'Montserrat', sans-serif;
+$crimson: #d53a3a;
+$Gold: 	#FFD700;
+$font-primary: 'Chalkduster', fantasy;
