--- a/src/style/components/madlib_content.scss
+++ b/src/style/components/madlib_content.scss
@@ -7,22 +7,22 @@
 }
 
 .content-wrapper {
-    background-color: #f2f2f2;
-    padding: 42px;
+    background-color:#696969;
+    padding: 50px;
     margin-top: -22px;
 }
 
 .black-label {
-    background-color:#000;
+    background-color:rgb(102, 20, 20);
     border-radius: 100px;
     width:18px;
     height:18px;
     font-size: 12px;
     text-align: center;
-    color: white;
+    color:white;
     margin: 5px;
 }
 
 .bold-text {
-    color: $clearBlue;
+    color: $Gold;
 }
