--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -4,13 +4,19 @@
     position:static;
     display: flex;
     flex-direction:column;
+    
 }
 
 .card{
-    width: 86vw;
+    width: 60vw;
     border-radius: 7px;
-    box-shadow: 0 4px 30px p rgba(0,0,0,0.75);
-    padding:50px 80px;
+    border-bottom: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0,0,0,0.75);
+    // padding:5px 0px;
+    background-image: url("https://orig00.deviantart.net/8203/f/2013/283/b/b/fortune_teller_by_kyrukai-d6pwt2f.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    
 }
 
 .input-wrapper {
@@ -21,20 +27,21 @@ input {
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
-    border-bottom: 1px solid $mainGray;
+    border-bottom: 1px solid $Gold;
     text-align: center;
     font-weight: 500;
     width:100%;
 }
 
 .input-description {
-    color: #b3b3b3;
+    color:grey;
     font-weight: 300;
     font-size: 12px;
+    box-shadow: #d53a3a;
 }
 
 .green-label {
-    background-color: $bottegaGreen;
+    background-color: $black;
     border-radius: 100px;
     width: 26px;
     height: 26px;
@@ -52,12 +59,12 @@ input {
 
 .generate-button {
    @include buttonStyles;
-   background-color: $bottegaGreen;
+   background-color: $DimGray;
 }
 
 .clear-button, a {
    @include buttonStyles;
-   background-color: $clearBlue;
+   background-color: $CadetBlue;
    padding-top: 9px;
    text-align: center;
 }
