--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,15 +1,9 @@
 .backgroundSkew {
     width: 100vw;
-    height: 700px;
-    background-color: $darkGray;
-    transform: skewY(-10deg);
-    margin-top:-17rem;
-    padding-top:17rem;
-    border-bottom:1rem solid $bottegaGreen;
-}
-
-.backgroundSkew > * { 
-    transform: skewY(10deg);
+    
+    background-color: #000000;
+    background-image: url("http://st.gde-fon.com/wallpapers_original/305628_tekstury_chernye_serye_1920x1080_www.Gde-Fon.com.jpg")
+    
 }
 
 .madlib-heading {
@@ -17,12 +11,12 @@
     margin: 20px;
     padding-top: 46px;
     color: white;
-    font-weight: 700;
+    font-weight: bold;
     font-family: $font-primary;
 }
 
 .madlib-heading {
     margin-bottom: 46px;
-    color: rgba(255,255,255,0.75);
+    color: rgba(255, 57, 57, 0.75);
     font-size: 15px;
 }
