--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -16,6 +16,7 @@
     background-image: url("https://orig00.deviantart.net/8203/f/2013/283/b/b/fortune_teller_by_kyrukai-d6pwt2f.jpg");
     background-repeat: no-repeat;
     background-size: contain;
+    background-color: lightblue;
     
 }
 
@@ -34,7 +35,7 @@ input {
 }
 
 .input-description {
-    color:grey;
+    color:green;
     font-weight: 300;
     font-size: 12px;
     box-shadow: #d53a3a;
@@ -59,7 +60,7 @@ input {
 
 .generate-button {
    @include buttonStyles;
-   background-color: $DimGray;
+   background-color: lightgreen;
 }
 
 .clear-button, a {
