--- a/src/style/components/madlib_content.scss
+++ b/src/style/components/madlib_content.scss
@@ -7,7 +7,7 @@
 }
 
 .content-wrapper {
-    background-color:#696969;
+    background-color:lightgreen;
     padding: 50px;
     margin-top: -22px;
 }
@@ -24,5 +24,5 @@
 }
 
 .bold-text {
-    color: $Gold;
+    color: red;
 }
